# CLIver

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ai-platform-wbs.md  dev.md  mkdocs.yml  pyproject.toml  sample_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
admin/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
admin/e2e/: llm-cell-chat.spec.ts
admin/src/: App.tsx  globals.css  main.tsx
admin/src/components/: cliver-logo.tsx  code-editor.tsx  confirm-dialog.tsx  markdown-view.tsx  sidebar.tsx  status-pill.tsx  theme-toggle.tsx  top-bar.tsx
admin/src/contexts/: sidebar-context.tsx
admin/src/hooks/: use-api.ts  use-conversations.ts  use-lab.ts  use-notebook.ts  use-websocket.ts
admin/src/i18n/: context.tsx
admin/src/lib/: api.ts  chat-stream.ts  skill-utils.ts
admin/src/pages/: chat.tsx  config.tsx  dashboard.tsx  login.tsx  session-detail.tsx  sessions.tsx  settings.tsx  skills.tsx
docs/: chat.md  configuration.md  extensibility.md  gateway.md  index.md  installation.md  memory-identity.md  overview.md  permissions.md  roadmap.md  session-management.md  session.md  skills.md  workflow.md
docs/examples/: basic_workflow.yaml  cliver_config.json  cliver_config.yaml  code_review_workflow.yaml  conditional_step.yaml  error_handling.yaml  function_step.yaml  human_step.yaml  llm_step.yaml  my_command.py  run_workflow.py  simple_example.py  simple_example_stream.py  variable_access_example.yaml  workflow_step.yaml
docs/javascripts/: mermaid-zoom.js
docs/superpowers/plans/: 2026-04-18-multimodal-generation.md
docs/superpowers/specs/: 2026-04-18-multimodal-generation-design.md  2026-05-12-agent-type-system-design.md
examples/: .gitignore  simple.py
src/cliver/: __init__.py  agent.py  agent_factory.py  agent_profile.py  builtin_tools.py  chat_templates.py  cli.py  cli_dialog.py  cli_llm_call.py  cli_tool_progress.py  cli_ui.py  cliver_run.py  command_dispatcher.py  command_router.py  config.py  constants.py  conversation_compressor.py  core.py  cost_tracker.py  db.py  events.py  key_store.py  mcp.py  mcp_server_caller.py  media.py  media_handler.py  messages.py  model_capabilities.py  permissions.py  prompt_enhancer.py  scenario_installer.py  secret_resolver.py  session_manager.py  skill_manager.py  skill_reviewer.py  system_prompt.py  task_manager.py  template_utils.py  themes.py  token_tracker.py  (+6 more)
src/cliver/agents/: __init__.py  claude_agent.py  cli_agent.py  cliver_agent.py  factory.py  gemini_agent.py  models.py  opencode_agent.py  store.py
src/cliver/commands/: __init__.py  agent.py  agent_cmd.py  capabilities.py  chat.py  chat_handler.py  clear_cmd.py  config.py  console_callback_handler.py  cost.py  gateway_cmd.py  handlers.py  help_cmd.py  hypershift.py  identity.py  keys.py  llm.py  mcp.py  memory.py  model.py  profile.py  (+11 more)
tests/: conftest.py  test_adapter_loading.py  test_adapter_manager.py  test_admin.py  test_agent.py  test_agent_config.py  test_agent_factory.py  test_agent_parsers.py  test_agent_profile.py  test_agent_store.py  test_all_commands.py  test_api_server.py  test_browse_web.py  test_browser_action.py  test_call_context.py  test_cell_executor.py  test_cicd.py  test_cli.py  test_cli_agent.py  test_cli_routing.py  test_cliver_agent.py  test_command_dispatcher.py  test_command_router.py  test_condition_eval.py  test_config_commands.py  test_config_pricing.py  test_context_renderer.py  test_conversation_compressor.py  test_cost_command.py  test_cost_tracker.py  test_create_task_tool.py  test_create_workflow.py  test_db.py  test_discord_adapter.py  test_e2e_multimedia.py  test_execute_code.py  test_extract_response_text.py  test_feishu_adapter.py  test_file_embedding_fallback.py  test_file_upload.py  (+67 more)
tests/workflow/: conftest.py  test_function_step_jinja2.py  test_nested_outputs.py  test_result_propagation.py  test_skill_workflow_integration.py  test_workflow_engine.py
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+259 files in other folders)
